--- a/spec/integration_specs/index.html
+++ b/spec/integration_specs/index.html
@@ -6,6 +6,8 @@
 
   <link rel="stylesheet" type="text/css" href="jasmine.css">
   <script type="text/javascript" src="jasmine-2.0.0.rc1.js"></script>
+  <script type="text/javascript" src="../vendor/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="jasmine-jquery-1.3.1.js"></script>
   <script type="text/javascript" src="jasmine-html.js"></script>
 
   <script type="text/javascript" src="../vendor/underscore.js"></script>
