--- a/spec/integration_specs/index.html
+++ b/spec/integration_specs/index.html
@@ -9,12 +9,17 @@
   <script type="text/javascript" src="../vendor/jquery-1.8.3.js"></script>
   <script type="text/javascript" src="jasmine-jquery-1.3.1.js"></script>
   <script type="text/javascript" src="jasmine-html.js"></script>
+  <script type="text/javascript" src="sinon-1.5.2.js"></script>
+  <script type="text/javascript" src="../vendor/jasmine-sinon.js"></script>
+
 
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
 
   <script type="text/javascript">
     window.global = window;
+
+    jasmine.getFixtures().fixturesPath = '../'
   </script>
 
   <script type="text/javascript" src="new_card_view_spec.js"></script>
