--- a/spec/integration_specs/index.html
+++ b/spec/integration_specs/index.html
@@ -18,11 +18,13 @@
 
   <script type="text/javascript">
     window.global = window;
+    window.PERFORMING_INTEGRATION_TESTS = true;
 
-    jasmine.getFixtures().fixturesPath = '../'
+    jasmine.getFixtures().fixturesPath = '../';
   </script>
 
   <script type="text/javascript" src="new_card_view_spec.js"></script>
+  <script type="text/javascript" src="card_wall_view_spec.js"></script>
 
   <script type="text/javascript" src="../app.js"></script>
 
