render cards in card wall

--- a/spec/integration_specs/index.html
+++ b/spec/integration_specs/index.html
@@ -25,6 +25,7 @@
 
   <script type="text/javascript" src="new_card_view_spec.js"></script>
   <script type="text/javascript" src="card_wall_view_spec.js"></script>
+  <script type="text/javascript" src="card_view_spec.js"></script>
 
   <script type="text/javascript" src="../app.js"></script>
 
