--- a/spec/integration_specs/index.html
+++ b/spec/integration_specs/index.html
@@ -14,6 +14,7 @@
 
 
   <script type="text/javascript" src="../vendor/underscore.js"></script>
+  <script type="text/javascript" src="../vendor/handlebars-1.0.rc.1.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
 
   <script type="text/javascript">
